<resources>
    <string name="app_name">Farm Manager</string>
    <string name="action_back">Back</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_title_livestock">Livestock</string>
    <string name="menu_crops">Crops</string>
    <string name="title_activity_launcher">Farm Manager</string>
    <string name="title_home">Home</string>

    <string name="sales_record">Sales Record</string>
    <string name="title_activity_revenue">Revenue</string>
    <string name="tab_expenses">Expenses</string>
    <string name="tab_income">Income</string>
    <string name="tab_weather">Weather</string>
    <string name="tab_news">News</string>
    <string name="title_activity_record_purchases">RecordPurchasesActivity</string>
    <string name="title_activity_bills">BillsActivity</string>
    <string name="title_activity_salary">SalaryActivity</string>
    <string name="title_plans">Plans</string>
    <string name="title_reports">Reports</string>
    <string name="title_resources">Resources</string>
    <string name="title_activity_crops">CropsActivity</string>
    <string name="title_activity_livestock">LivestockActivity</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_update_crop_avtivity">UpdateCropAvtivity</string>
    <string name="title_activity_update_livestock">UpdateLivestock</string>
    <string name="see_more">See More</string>
    <string name="title_activity_news">News</string>
    <string name="storage">Storage</string>
    <string name="shelters">Shelters</string>
    <string name="fields">Fields</string>
    <string name="inventory">Inventory</string>
    <string name="employees">Employees</string>
    <string name="title_activity_employees">Employees</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="employee_absent_message">No employee data added yet. \n Click on the plus button below to add employee details</string>
    <string name="title_activity_add_employee">AddEmployee</string>
    <string name="title_activity_update_employee">UpdateEmployee</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="social_links">Social links</string>
    <string name="share">Share</string>
    <string name="demos">Demos</string>
    <string name="learn">Learn</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_feeds">Feeds</string>
    <string name="record_purchase">Purchases</string>
    <string name="record_sale">Record Sale</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registration">Registration</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_the_name_of_your_farm">Enter the name of your farm</string>
    <string name="forgotten_username_or_password">Forgotten username or password?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="assign_activity">Assign Activity</string>
    <string name="view_history">View History</string>

</resources>