<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_support_outline_24"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_about_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_learn"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/learn" />
        <item
            android:id="@+id/nav_demos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/demos" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_baseline_link_24"
            android:title="@string/social_links" />
    </group>
</menu>