<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/layout_background"
    android:gravity="center"
    tools:context=".Registration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="@dimen/title_size"
        android:layout_margin="@dimen/margin"
        android:fontFamily="cursive"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name_edit"
        android:hint="@string/first_name"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="textPersonName|textCapWords"
        android:drawableStart="@drawable/ic_baseline_particulars"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_baseline_particulars" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_name_edit"
        android:hint="@string/last_name"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="textCapWords|textPersonName"
        android:drawableStart="@drawable/ic_baseline_particulars"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_baseline_particulars" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_edit"
        android:hint="@string/enter_your_email"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_particulars"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_baseline_particulars" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_edit"
        android:hint="@string/enter_your_phone_number"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/farm_name_edit"
        android:hint="@string/enter_the_name_of_your_farm"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="textCapWords"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_home_black_24dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_edit"
        android:hint="@string/enter_your_password"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_baseline_lock_24" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_edit"
        android:hint="@string/confirm_your_password"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/padding"
        android:drawableLeft="@drawable/ic_baseline_lock_24" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration_btn"
        android:background="@drawable/button_background"
        android:text="@string/create_account"
        android:layout_margin="@dimen/margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin"
            android:onClick="toLogin"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_marginStart="@dimen/margin" />
    </LinearLayout>

</LinearLayout>