<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/layout_background"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_edit_reset"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/padding"
        android:hint="@string/enter_your_phone_number"
        android:layout_margin="@dimen/margin"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_phone"
        android:drawableLeft="@drawable/ic_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_edit_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_password"
                android:layout_margin="@dimen/margin"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="@dimen/padding"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_baseline_lock_24" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password_edit_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_your_password"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/padding"
            android:inputType="textPassword"
            android:layout_margin="@dimen/margin"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_baseline_lock_24" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancel_btn"
            android:text="Cancel"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/reset_pass_btn"
            android:text="Reset"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>